k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant
  labels:
    name: restaurant
    app: restaurant-management
